# darts

./: Cargo.toml  DEVBOOK.md  README.md  config.json  env.sh.example
api/: Cargo.toml  build.rs
api/src/: convert.rs  game.rs  main.rs  playground.rs
api_mock/: Cargo.toml  build.rs
api_mock/src/: games_service.rs  main.rs
cli/: Cargo.toml
cli/src/: main.rs
coordinator/: Cargo.toml
coordinator/src/: lib.rs  referee.rs
dataspine/: Cargo.toml
dataspine/.sqlx/: query-159a958c59139ef3493f1583331f1d2aadc9d0468e5ae28955032391b9b5312e.json  query-162f69f9c80518ac105c2f9a9d3c013f177741850797d8483ef378d4fa24e946.json  query-23c83db826875ad96b908a2a87b7a970b8fa0241a5b3647f9ccbea0e60d6e4e5.json  query-29cd08de450d34b2b76225a82f6c10ad73e5394cb950a7b98f900904167999b4.json  query-2e21f099cb7a75500239c41bba3d7c06f2abb6d9139c0cfc911d481ea54614fb.json  query-42c8402faa027f6aa9c2c2e544b35004ffa26a352b4388861480868911de903e.json  query-4783b4b2fabcab16cd565853be2744a6e9b4e2eb1fc92c5d40e184c5221089ad.json  query-55fab18cc77a133e62457ed332c159ff854f185e6d44bd45f107a1de03dbb10f.json  query-6fa9558cde464003817c3b7dfba4fc49cdacda638b3252f7c826707cb6985828.json  query-77309c74bc8ec129ebadfea53c82b2188cf570650035933d75c04f576de114b3.json  query-b3c36605fa6ce8b09c0c0c5cfe945e5a01f54a07a049845c32193d571af85967.json  query-b3fb1c7ddd38746e9dc42179cdc38c7f8e5bced2da5e3022067de035c4cab122.json  query-b46ede9fbec13883c59d5be8d8b88afb1e5e58555ce40a5d1470963502b3a37d.json  query-bc51088b06f4b84100acc5bc07ba097e068336d6ba7eb2e29d68854731cc8c81.json  query-c39440afc183199f5f423fe940a53806d8ed3e4a796499f6913921f874bdbfd5.json  query-c6d9a4088bf9336a7342745a4e2e94c80fbd4d69f3b2c1e5f1dae5166c4d7de0.json  query-cca7969ed2e8a9807c61e70c9e74f8b1f586f1240c2d64577472f38de5df878d.json  query-ce4b4537338d6fbb1de215cab219c2df4e30a4ff2fcaa38416483037063e334a.json  query-d80a5013a52c3b5176b786b5162c8f753cb95eac5ee1b5803f8101b83efcce12.json  query-d8aba411cd78be7286b44c59779f42fce30347fa1a6f92cc4e0c2b82cc9efb40.json  query-daa16951a6cbfda8161f8e3bf7f04a84f7dfd760c1aa0a71c2b75e6664bd5821.json  query-ddd6e0ce981fb029f8d2f0e15c79740ed8b01004b283bfd52eb5ec086b57015b.json  query-fabb9e0e452718b6650157687cea5d28b1535c16a0376c8014ab9e0f906d2ab1.json  query-fbf24c31bb98ce8dd965f98f8975341ce42197b3509b3565c55312099a6c886e.json  query-ff2c09f427725eedc1bdefc1c112f426a29808c76d8edbf8dea12eeee7b14f74.json
dataspine/migrations/: 20240310173935_create_schema_playground.down.sql  20240310173935_create_schema_playground.up.sql  20240310174241_create_games.down.sql  20240310174241_create_games.up.sql  20240311094538_create_scores.down.sql  20240311094538_create_scores.up.sql
dataspine/queries/: find_game.sql  insert_game.sql  list_games.sql  update_game.sql
dataspine/src/: game_row.rs  games.rs  helpers.rs  lib.rs  postgres.rs  repo.rs  scores.rs
dataspine/tests/: delete_score_test.rs  find_game_test.rs  insert_game_test.rs  insert_score_test.rs
dataspine/tests/fixtures/: games.sql
dataspine/tests/helpers/: mod.rs
dataspine/tests/integration/: delete_score_test.rs  find_game_test.rs  get_game_state.rs  get_game_test.rs  helpers.rs  insert_game_test.rs  insert_score_test.rs  list_games_test.rs  main.rs  referee_get_game.rs  save_game_test.rs  spectator_get_game.rs  update_game_test.rs
dataspine/tests/integration/fixtures/: games.sql
docker/: compose.yaml  grpc.Dockerfile  web.Dockerfile
documentation/: book.toml
documentation/src/: SUMMARY.md  class_diagram.md  entity_relationship_diagram.md
gateway/: Cargo.toml
gateway/src/: lib.rs  referee.rs  repo.rs  spectator.rs
playground/: Cargo.toml
playground/src/: coordinator.rs  error.rs  game.rs  game_preview.rs  game_state.rs  lib.rs  number.rs  player.rs  player_number.rs  player_score.rs  points.rs  points_limit.rs  positive_integer.rs  referee.rs  round.rs  schedule.rs  score.rs  score_details.rs  score_tracker.rs  spectator.rs
protobuf/proto/: games.proto
rusty-web/: Cargo.toml  Dioxus.toml
rusty-web/src/: main.rs
score_tracker/: Cargo.toml
score_tracker/src/: lib.rs
web/: .rubocop.yml  Gemfile  README.md  app.rb  config.ru
web/app/: game.rb  game_details.rb  game_list_item.rb  games_api.rb  games_service.rb  main.rb
web/grpc_server_mock/: games.txt  main.rb
web/views/: game.erb  home.erb  scores.erb
(+8 files in other folders)
