[workspace]
resolver = "2"
members = [ "cli", "playground", "dataspine", "api", "api_mock"]

[workspace.dependencies]
anyhow = "1.0.80"
chrono = "0.4.35"
clap = { version = "4.5.3", features = ["derive"] }
dataspine = { path = "dataspine" }
eyre = "0.6.12"
playground = { path = "playground" }
prost = { version = "0.12" }
prost-types = { version = "0.12" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "chrono", "uuid"] }
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "sync"] }
tonic = "0.11.0"
uuid = "1.7.0"
