[package]
name = "api_mock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[build-dependencies]
anyhow = { workspace = true }
tonic-build = { version = "0.11" }
