[package]
name = "dataspine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
chrono = "0.4.35"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "chrono", "uuid"] }
thiserror = { workspace = true }
uuid = "1.7.0"
