[package]
name = "rusty-web"
version = "0.1.0"
authors = ["Stanislav Shandyga <stanislavshandyga@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true, features = ["derive"] }

dioxus = { git = "https://github.com/DioxusLabs/dioxus", features = ["fullstack"] }

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
